--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
   "scripts": {
     "firstRunPreact": "node_modules/.bin/preact create my-preact-app",
     "testPreact": "if [ ! -f my-preact-app/package.json ]; then yarn run firstRunPreact; fi",
-    "prestartPreact": "yarn run testPreact",
+    "prestartPreact": "npm install && yarn run testPreact",
     "startPreact": "cd my-preact-app && yarn start",
     "namePkgReturn": "mv package.json replacement.package.json && mv temp.package.json package.json",
     "namePkgTemp": "mv package.json temp.package.json && mv replacement.package.json package.json",
     "firstRunAngular": "npm run namePkgTemp && ng new my-angular-app && npm run namePkgReturn",
     "testAngular": "if [ ! -f my-angular-app/package.json ]; then npm run firstRunAngular; fi",
-    "prestartAngular": "npm run testAngular",
+    "prestartAngular": "npm install && npm run testAngular",
     "startAngular": "cd my-angular-app && node_modules/.bin/ng serve",
     "firstRunVue": "node_modules/.bin/vue init webpack my-vue-app",
     "testVue": "if [ ! -f my-vue-app/package.json ]; then yarn run firstRunVue; fi",
-    "prestartVue": "yarn run testVue",
+    "prestartVue": "npm install && yarn run testVue",
     "startVue": "cd my-vue-app && npm install && npm run dev",
     "firstRunReact": "node_modules/.bin/create-react-app my-react-app",
     "testReact": "if [ ! -f my-react-app/package.json ]; then yarn run firstRunReact; fi",
-    "prestartReact": "yarn run testReact",
+    "prestartReact": "npm install && yarn run testReact",
     "startReact": "cd my-react-app && yarn start",
-    "startAll": "npm install && parallelshell 'yarn run startReact' 'yarn run startPreact' 'yarn run startVue' 'yarn run startAngular'"
+    "startAll": "parallelshell 'yarn run startReact' 'yarn run startPreact' 'yarn run startVue' 'yarn run startAngular'"
   },
   "dependencies": {
     "@angular/cli": "^1.4.3",
